<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/datePermConducirConsulta"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.furgoficina.ConsultaActivity">

    <Button
        android:id="@+id/bvolverConsultar4"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="35dp"
        android:onClick="volver"
        android:text="@string/bConsultar"
        app:layout_constraintStart_toEndOf="@+id/bvolverConsultar"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textConsulta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/text2ConsultaConductor"
        android:textColor="#0C0C0C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textdniConsulta" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:contentDescription="@string/listPermisoCirculacion"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imadrConsulta"
        app:srcCompat="@mipmap/tarjetadeidentificacion1red" />

    <ImageView
        android:id="@+id/imCapConsulta"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:contentDescription="@string/listCAP"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imNombreConsulta"
        app:srcCompat="@mipmap/capred" />

    <ImageView
        android:id="@+id/immatriculaCambiar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/textDni"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textConsulta1"
        app:srcCompat="@mipmap/tarjetadeidentificacionred3" />

    <EditText
        android:id="@+id/textdniConsulta"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toEndOf="@+id/immatriculaCambiar"
        app:layout_constraintTop_toBottomOf="@+id/textConsulta1"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:contentDescription="@string/listarjtacConductor"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imCapConsulta"
        app:srcCompat="@mipmap/tacografored" />

    <ImageView
        android:id="@+id/imadrConsulta"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:contentDescription="@string/listADR"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        app:srcCompat="@mipmap/adrred" />

    <ImageView
        android:id="@+id/imNombreConsulta"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:contentDescription="@string/textNombre"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textConsulta"
        app:srcCompat="@mipmap/nombrered" />

    <Button
        android:id="@+id/bvolverConsultar"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:onClick="volver"
        android:text="@string/botVolver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView13"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/dateCapConsulta"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/imCapConsulta"
        app:layout_constraintTop_toBottomOf="@+id/textPersonNameConsulta"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/dateTarjTacogConsulta"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toBottomOf="@+id/dateCapConsulta"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/dateAdrConsulta"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/imadrConsulta"
        app:layout_constraintTop_toBottomOf="@+id/dateTarjTacogConsulta"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/datePermConducirCons"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toBottomOf="@+id/dateAdrConsulta"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textPersonNameConsulta"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/imNombreConsulta"
        app:layout_constraintTop_toBottomOf="@+id/textConsulta"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textConsulta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:text="@string/textConsultaConductor"
        android:textColor="#0C0C0C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>