<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.furgoficina.MainActivity">

    <ImageButton
        android:id="@+id/iBCamion"
        android:layout_width="240dp"
        android:layout_height="230dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/botCamion"
        android:onClick="abrirbCamion"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iBConductor"
        app:srcCompat="@mipmap/camion" />

    <ImageButton
        android:id="@+id/iBConductor"
        android:layout_width="240dp"
        android:layout_height="230dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/botConductor"
        android:onClick="abrirbConductor"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/conductorred" />

    <Button
        android:id="@+id/buttonCerrar"
        android:layout_width="151dp"
        android:layout_height="60dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="25dp"

        android:text="@string/botSalir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iBCamion"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>